tests/trybuild/typed_id_fail_wrong_resource.stderr
error[E0277]: the trait bound `ClassId: From<GroupId>` is not satisfied
 --> tests/trybuild/typed_id_fail_wrong_resource.rs:4:34
  |
4 |     let _ = client.classes().get(group_id);
  |                              --- ^^^^^^^^ the trait `From<GroupId>` is not implemented for `ClassId`
  |                              |
  |                              required by a bound introduced by this call
  |
help: `ClassId` implements trait `From<T>`
 --> src/resources/class.rs
  |
  | #[derive(ApiResource)]
  |          ^^^^^^^^^^^
  |          |
  |          `From<&ClassId>`
  |          `From<i32>`
  = note: required for `GroupId` to implement `Into<ClassId>`
note: required by a bound in `hubuum_client::blocking::Resource::<T>::get`
 --> src/client/sync.rs
  |
  |     pub fn get<I: Into<T::Id>>(&self, id: I) -> Result<Handle<T>, ApiError> {
  |                   ^^^^^^^^^^^ required by this bound in `Resource::<T>::get`
  = note: this error originates in the derive macro `ApiResource` (in Nightly builds, run with -Z macro-backtrace for more info)
